...

object ProjectListScreenTestTags {
  const val PROJECT_LIST_SCREEN = "ProjectListScreen"
  const val PROJECT_LIST = "projectList"
  const val PROJECT_CARD = "projectCard"
  const val SEARCH_BAR = "searchBar"
  const val SEARCH_TEXT_FIELD = "searchTextField"
}

@Composable
// Implementation of the file access screen
fun ProjectListScreen(
    viewModel: ProjectListViewModel = viewModel(),
...
