...
    get() = tag("sampleDownloads")

  // Lazy column
  const val LAZY_COLUMN_SAMPLE_LIST = "sampleList"

  // Comments
  const val COMMENT_SECTION = "commentSection"
  const val COMMENT_TEXT_FIELD = "commentTextField"
  const val COMMENT_POST_BUTTON = "commentPostButton"
  const val COMMENT_LIST = "commentList"
  const val COMMENT_PICTURE = "commentPicture"
  const val COMMENT_DELETE_BUTTON = "commentDeleteButton"
}
...
