...
}

@Composable
private fun AccountSettingsSection(signOut: () -> Unit) {
  Column {
    Text(
        text = "Account",
        style =
            TextStyle(
                fontSize = 37.sp,
                fontFamily = FontFamily(Font(R.font.markazi_text)),
                fontWeight = FontWeight(400),
                color = NepTuneTheme.colors.onBackground,
            ),
        modifier = Modifier.padding(bottom = 8.dp))
    SettingItemCard(
        text = "Log Out",
        imageVector = Icons.AutoMirrored.Filled.Logout,
        contentDescription = "log out",
        onClick = signOut)
  }
}

